--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -30,5 +30,12 @@
 <meta name="twitter:image" content="<%= image %>">
 <% } %>
 
+<!-- Favicon -->
+<link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+<link rel="shortcut icon" href="/favicon.ico" />
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+<link rel="manifest" href="/site.webmanifest" />
+
 <!-- Stylesheets -->
 <link rel="stylesheet" href="/css/main.css">
